fix z-index fav panel & more button

--- a/src/scss/includes/panels/favorite_panel.scss
+++ b/src/scss/includes/panels/favorite_panel.scss
@@ -76,7 +76,7 @@
   display: none;
   position: absolute;
   right: 20px;
-  top: 38px;
+  top: -35px;
   padding: 14px 16px 10px 16px;
   background: $background;
   color: $primary_text;
