--- a/src/scss/includes/z_index.scss
+++ b/src/scss/includes/z_index.scss
@@ -22,6 +22,6 @@
   z-index: 2;
 }
 
-.poi_panel, favorites_panel {
+.poi_panel, .favorites_panel {
   z-index: 2;
 }
